@@ -98,6 +98,7 @@ ENABLE_USER_DB="0"
 ENABLE_FORCE_ENCRYPTION="0"
 SSHD_CHECK_IP="0"
 
+ENABLE_SLAVE_MODE="0"
 
 # Restriction directives
 
